<resources>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
    <string name="app_name">Exo Control</string>
    <string name="action_scan">SCAN</string>
    <string name="action_stop">STOP</string>
    <string name="activity_device">Device</string>
    <string name="action_settings">Settings</string>
    <string name="enableButtonText">Enable</string>
    <string name="auto_calibrate_button_text">Auto Calibrate</string>
    <string name="reset_button_text">Reset</string>
    <string name="stoSwitchLabel">Power</string>
    <string name="NoPairMsg">You haven\'t paired with any exoskeletons. Go to settings and pair with one!</string>
    <string name="NoBTMsg">Device does not support Bluetooth</string>
    <string name="battLabel">Battery:</string>
    <string name="control_mode">Control Mode:</string>
    <string name="command_input">Command Input:</string>
    <string name="send">Send</string>
    <string name="_0_000">0.000</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="dummy_text">Bottom Text</string>
    <string name="connecting">Connecting…</string>
    <string name="export">Export</string>
    <string name="utd_email">\@utdallas.edu</string>
    <string name="log_data">Log data:</string>
    <string name="write">Write:</string>
    <string name="max_torque">Max Torque:</string>
    <string name="export_data_desc">Export data</string>
    <string name="save_with_space">Save</string>
    <string name="manual_command">Manual Command</string>
    <string name="no_extern_storage_perm_msg">Permission denied to access external storage. Data export is not available.</string>
    <string name="no_bt_msg">Your device does not support Bluetooth. This app will not work.</string>
    <string name="example_item_name">Example Item</string>
    <string name="is_this_an_exoskeleton">Is this an exoskeleton?</string>
    <string name="example_mac_addr">00:11:22:33:44:55</string>
    <string name="example_rssi">-55</string>
    <string name="experiment_name">Experiment Name</string>
</resources>
