<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="147dp">

    <Button
        android:id="@+id/autoCalID2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/reset_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/autoCalID"
        app:layout_constraintTop_toBottomOf="@+id/enableID" />

    <Button
        android:id="@+id/autoCalID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/auto_calibrate_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        app:layout_constraintBottom_toBottomOf="@+id/autoCalID2"
        app:layout_constraintEnd_toStartOf="@+id/autoCalID2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stoID" />

    <Switch
        android:id="@+id/enableID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/enableButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stoID"
        app:layout_constraintTop_toBottomOf="@+id/controlSpinner" />

    <Switch
        android:id="@+id/stoID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/stoSwitchLabel"
        app:layout_constraintBottom_toBottomOf="@+id/enableID"
        app:layout_constraintEnd_toStartOf="@+id/enableID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlSpinner" />

    <Spinner
        android:id="@+id/controlSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/enableID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlModeLabel" />

    <TextView
        android:id="@+id/controlModeLabel"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/control_mode"
        app:layout_constraintBottom_toTopOf="@+id/controlSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>